
Tweaks
+Bowls now have a 2% chance of breaking rather than 50%
+TFC Food is now supported by the new hunger system
+Animals are now converted back into TFC animals
+TFC Food is no longer converted to CWTFC Food
+CWTFC Food is now converted back to TFC Food on pickup
+Added recipe to convert CWTFC nestbox to TFC
+Cooking pot, sandwich, salad and meat salting now work with TFC food

Bug Fixes
+Cooking pot recipes with salt now register as valid
+Waila shows correct amount of salt used in cooking pot

-------------------------------------------------
Cooking With TFC 0.0.3.0
-------------------------------------------------
New Features
+Added GUI-less sandwich making with dynamic recipes
+Added GUI-less salad making with dynamic recipes
+Added GUI-less meat salting
+Added GUI-less mixing bowl for dough
+Added GUI-less cooking pot cooking
+Added config to toggle diminishing returns
+Added config to diable TFC food conversion on pickup
+Added API

Tweaks
+Removed all GUIs
+Changed prep table behavior to facilitate GUI-less cooking
+Rewrote code layout and mod versioning to follow standard conventions

Compatibility
+Added Terramisc compatibility

Bug Fixes
+Fixed TFC food disappearing when picked up
+Fixed pheasants turning into chickens
-------------------------------------------------
Cooking With TFC 0.02.05
-------------------------------------------------
New Features
+Added Cooking Pot
+Added Cooking Pot NEI recipes
+Added Cooking Pot WAILA support
+Added raw meats and cooked meats
+Added Sea and Rock Salt
+Added Boiled Chicken, Beef, Venison, Fish and Pork
+Added Broth
+Added Vegetable soup, Tomato soup, Chicken soup, Beef stew, Venison stew and Fish chowder
+Added changelog
+Added config for hiding TFC Foods from the creative menu and NEI, hidden by default


Tweaks
+Meats are now cooked like breads
+Raw meats are no longer used in sandwich recipes
+Meats are salted in the food prep table with sea or rock salt